--- a/bi_animation.html
+++ b/bi_animation.html
@@ -114,15 +114,17 @@
                   }
 
                   if (end){
+                    i = i + 2;
                     while (i<lines.length){
-                      temp = lines[i].split(/[ ,]+/);
+                      temp1 = lines[i-1].split(/[ ,]+/);
+                      temp2 = lines[i].split(/[ ,]+/);
 
 
-                      path = [{lng: Number(latestU[1]), lat: Number(latestU[2])},{lng: Number(latestF[1]), lat: Number(latestF[2])}];
+                      path = [{lng: Number(temp1[1]), lat: Number(temp1[2])},{lng: Number(temp2[1]), lat: Number(temp2[2])}];
                       var flightPath = new google.maps.Polyline({
                         path: path,
                         geodesic: true,
-                        strokeColor: '#3498db',
+                        strokeColor: '#d35400',
                         strokeOpacity: 1.0,
                         strokeWeight: 5
                       }); 
@@ -130,7 +132,6 @@
 
                       i++;
                     }
-                    break;
                   }
 
                   if (String(temp[0])=="b"){
