--- a/animation.html
+++ b/animation.html
@@ -127,11 +127,12 @@
                       var flightPath = new google.maps.Polyline({
                         path: path,
                         geodesic: true,
-                        strokeColor: '#d35400',
+                        strokeColor: '#000000',
                         strokeOpacity: 1.0,
                         strokeWeight: 5
                       }); 
                       flightPath.setMap(map);
+
 
                       i++;
                     }
